cherry-pick: fix some arrow & ard alignment problems

--- a/sass/_card.scss
+++ b/sass/_card.scss
@@ -38,7 +38,6 @@
   border-radius: $borderRadius;
   box-shadow: $LightShadow;
   padding: 0.75rem;
-  margin: 0.75rem;
   height: 100%;
   max-width: 600px;
   p {
